--- a/AuroraLoader/appsettings.json
+++ b/AuroraLoader/appsettings.json
@@ -1,15 +1,3 @@
 ﻿{
-    "mirrors": [
-        "https://raw.githubusercontent.com/Aurora-Modders/AuroraMods/master/"
-    ],
-    "executable_location": "aurora.exe",
-    "known_version_checksums": {
-        "1.6.2": "dWWrVq",
-        "1.6.3": "wUiE6B",
-        "1.7.0": "HlkNp1",
-        "1.7.1": "EC5iEP",
-        "1.7.2": "pbVzD2",
-        "1.7.3": "GeG18n",
-        "1.8.0": "i4SLwD"
-    }
+    "executable_location": "aurora.exe"
 }
