Add some basic exception handling Implement a few other comments from review

--- a/AuroraLoader/appsettings.json
+++ b/AuroraLoader/appsettings.json
@@ -1,3 +1,7 @@
 ﻿{
-    "executable_location": "Aurora.exe"
+    "executable_location": "aurora.exe",
+
+    "aurora_known_versions_relative_filepath": "Mods/aurora_versions.txt",
+    "aurora_mirrors_relative_filepath": "Mods/mirrors.txt",
+    "aurora_mods_relative_filepath": "Mods/mods.txt"
 }
