Saving progress - a few new registries/classes/etc

--- a/AuroraLoader/appsettings.json
+++ b/AuroraLoader/appsettings.json
@@ -1,6 +1,8 @@
 ﻿{
     "executable_location": "aurora.exe",
 
+    "aurora_registry_url": "https://raw.githubusercontent.com/Aurora-Modders/AuroraRegistry/master/",
+
     "aurora_known_versions_relative_filepath": "Mods/aurora_versions.txt",
     "aurora_mirrors_relative_filepath": "Mods/mirrors.txt",
     "aurora_mods_relative_filepath": "Mods/mods.txt"
