Renamespaced classes related to mods Recast Config as ModConfigurationReader as prep for work on json Updated Launcher to work wtih Mod Recast AuroraVersion as AuroraInstallation as prep for integrating update logic

--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -85,10 +85,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mods\aurora_versions.txt">
+    <None Update="Examples\aurora_versions.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mods\mirrors.txt">
+    <None Update="Examples\mirrors.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
