Initial JSON support Relocate the various files packaged with the loader to reflect https://github.com/Aurora-Modders/AuroraRegistry Moved some additional static methods into ModConfigurationReader Naming tweaks

--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -85,10 +85,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Examples\aurora_versions.txt">
+    <None Update="aurora_versions.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Examples\mirrors.txt">
+    <None Update="mirrors.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
