Working on a mod 'registry' (#6)
* Developing a registry for mods and creating a separating between remote and local mods

* Add some basic exception handling
Implement a few other comments from review

* Split up registry into discrete services

* Saving progress - a few new registries/classes/etc

* Add a tab

* 'Install or update mod' functionality looking great
ModRegistry has fully replaced Local/Remote registries everywhere they were used in main form
Brought in many of 01010100's changes from master

* Renamespaced classes related to mods
Recast Config as ModConfigurationReader as prep for work on json
Updated Launcher to work wtih Mod
Recast AuroraVersion as AuroraInstallation as prep for integrating update logic

* Initial JSON support
Relocate the various files packaged with the loader to reflect https://github.com/Aurora-Modders/AuroraRegistry
Moved some additional static methods into ModConfigurationReader
Naming tweaks

* Front-end work. Removed duplicate update from app startup.

* Configuration working
Added some comments

* Single player and EXE mods now working

* Utilities now run at game launch
Pulled in some of the latest from master

* Some json tweaks

* Fix deserializing ModType, so remote registry is (mostly) working again!

* Fixed bugs in the way local mods and mod listings in the registry are matched

* Restore 01010100's more flexible version handling logic

* Incorporated Aurora installer from master

* MVP
Mod installation moved to manage tab

* Handle a crash caused by having multiple versions of the same mod

* Populate game/manage tabs immediately
Refresh utilities tab after installing a mod

* CheckEnableGameMods restored original position / behavior

* Base game option added to launch exe

* Fix Aurora update button appearance

* Several enable/disable mod behaviors fixed

* Restored Aurora update functionality
Fixed some issues with locally cached Aurora checksums
Adde

--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -24,26 +24,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="FormInstallMod.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="FormInstallMod.Designer.cs">
-      <DependentUpon>FormInstallMod.cs</DependentUpon>
-    </Compile>
     <Compile Update="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Update="FormProgress.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>FormProgress.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="FormInstallMod.resx">
-      <DependentUpon>FormInstallMod.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Update="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Update="FormProgress.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>FormProgress.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,10 +85,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mods\aurora_versions.txt">
+    <None Update="aurora_versions.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Mods\mirrors.txt">
+    <None Update="mirrors.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
