--- a/AuroraLoader/mod.ini
+++ b/AuroraLoader/mod.ini
@@ -3,6 +3,6 @@ Type=Exe
 Version=0.19.1
 AuroraVersion=1
 Status=Approved
-Exe=AuroraLoader-0.20.0.exe
+Exe=AuroraLoader.exe
 Updates=https://raw.githubusercontent.com/Aurora-Modders/AuroraLoader/test_multiple_mirrors/updates.txt
 Config=README.md
