--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -68,7 +68,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Examples\DatabaseMod\uninstall.sql">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Examples\ThemeMod\mod.ini">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Examples\ThemeMod\Races\AlStarRace001.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="mirrors.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
