--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="NAudio" Version="1.10.0" />
     <PackageReference Include="Semver" Version="2.0.6" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -51,14 +52,9 @@
   </ItemGroup>
 
   <ItemGroup>
-  <None Include="Resources\Aurora.ico" />
-</ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Data.SQLite">
-      <HintPath>System.Data.SQLite.dll</HintPath>
-    </Reference>
+    <None Include="Resources\Aurora.ico" />
   </ItemGroup>
+
 
   <ItemGroup>
     <None Update="appsettings.json">
