Single-file deploy now works with DB mods mod/mirror/aurora_versions.ini now published alongside single file

--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -6,6 +6,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <StartupObject>AuroraLoader.Program</StartupObject>
     <ApplicationIcon>Aurora.ico</ApplicationIcon>
+    <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -51,12 +52,13 @@
   </ItemGroup>
 
   <ItemGroup>
-  <None Include="Resources\Aurora.ico" />
-</ItemGroup>
+    <None Include="Resources\Aurora.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <Reference Include="System.Data.SQLite">
       <HintPath>System.Data.SQLite.dll</HintPath>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Reference>
   </ItemGroup>
 
@@ -66,6 +68,7 @@
     </None>
     <None Update="aurora_versions.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
     <None Update="Examples\DatabaseMod\uninstall.sql">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -78,6 +81,7 @@
     </None>
     <None Update="mirrors.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
     <None Update="mod.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -89,6 +93,7 @@
     </None>
     <None Update="update_loader.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
   </ItemGroup>
 
