--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -35,6 +35,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v1
