Tweak tag and sha

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -47,6 +47,6 @@ jobs:
           artifactContentType: application/zip
           prerelease: true
           allowUpdates: true
-          commit: $GITHUB_SHA
-          tag: "AuroraLoader-$GITHUB_REF"
+          commit: $GITHUB_REF
+          tag: "release_candidate"
           token: ${{ secrets.GITHUB_TOKEN }}
