Support new json mod format (#47)
* Factor out RemoteModRegistry

* Factor out MirrorRegistry

* Only update list of known versions from mirror at app startup
(i.e. 'RefreshAuroraInstallData' only does a faster local check now)

* No longer any real need for an interface

* Factor out LocalModRegistry

* Further unwind dependencies

* Teach Mod how to install and update itself

* Add JsonSemversionConverter

* Initiate jsonification

* Factor out Mirror, ModConfiguration, ModListing

* Simplify

* Create a static method for deserializing mods
Fix path that AuroraLoader mod.json is copied to

* Fix version label text
Rev mod version on branch

* Tweak the way mods are copied to root dir at game launch

* Improve player postgame motivation

* Invert compatibility check
* shrug *

* ModCompatibility.ToString() now shows wildcards (*)
Checksum of unknown Aurora executable now fits in window

* Fix path used to find config files
(lazily) add description to manage listview

* Fix bug in custom Json converters

* Teach ModVersion how to install and uninstall itself
Change name: GameInstallation -> AuroraInstallation
Change name: ModVersion.InstallationPath -> ModVersion.DownloadPath
Change name: ModVersion.Installed -> ModVersion.Downloaded
Delete unused duplicate of GetChecksum

* Small tweaks, quick unit test stub

* Automatically download music the first time it's enabled
Tweak caching behavior of aurora versions slightly

* Fix several utility launch issues

* Yank test change from mirrors.ini

* Simplify mod downloaded status
Add 'IMod' interface for mocking

* Fix two failing tests

* Remove loose scrap of old code

* Create a backup immediately at launch if one does not exist
Tweak exception handling at launch

* Fix mod.json not being published
Add additional log output

* Rev version

* Take a swipe at automating releases

* Tweak publish command to read target runtime from csproj

* Zip

--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RuntimeIdentifier>win-x86</RuntimeIdentifier>
     <UseWindowsForms>true</UseWindowsForms>
     <StartupObject>AuroraLoader.Program</StartupObject>
     <ApplicationIcon>Aurora.ico</ApplicationIcon>
@@ -13,18 +14,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Releases\**" />
     <Compile Remove="TestUpdates\**" />
+    <EmbeddedResource Remove="Releases\**" />
     <EmbeddedResource Remove="TestUpdates\**" />
+    <None Remove="Releases\**" />
     <None Remove="TestUpdates\**" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Aurora.ico" />
+    <None Remove="mod.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Aurora.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="mod.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
 
@@ -94,10 +103,6 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="mirrors.ini">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-    </None>
-    <None Update="mod.ini">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </None>
