--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,3 +23,43 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+    - name: Publish
+      run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained false --nologo -f netcoreapp3.1 -r win-x86
+    - name: "Zip"
+      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-${{ github.head_ref }}.zip
+    - name: Upload AuroraLoader artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: AuroraLoader
+        path: ./AuroraLoader-${{ github.head_ref }}.zip
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: AuroraLoader
+      - uses: ncipollo/release-action@v1
+        if: github.event_name == 'pull_request'
+        with:
+          name: AuroraLoader ${{ github.head_ref }}
+          tag: ${{ github.head_ref }}
+          commit: ${{ github.event.after }}
+          artifacts: AuroraLoader-${{ github.head_ref }}.zip
+          artifactContentType: application/zip
+          prerelease: true
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ncipollo/release-action@v1
+        if: github.event_name != 'pull_request'
+        with:
+          name: AuroraLoader
+          tag: ${{ github.ref }}
+          commit: ${{ github.sha }}
+          artifacts: "AuroraLoader.zip"
+          artifactContentType: application/zip
+          prerelease: true
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
