--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: AuroraLoader
-        path: ./AuroraLoader-${{ github.head_ref }}.zip
+        path: ./AuroraLoader.zip
 
   release:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
           name: AuroraLoader ${{ github.head_ref }}
           tag: ${{ github.head_ref }}
           commit: ${{ github.event.after }}
-          artifacts: AuroraLoader-${{ github.head_ref }}.zip
+          artifacts: AuroraLoader.zip
           artifactContentType: application/zip
           prerelease: true
           allowUpdates: true
