--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,12 +26,12 @@ jobs:
     - name: Publish
       run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained false --nologo -f netcoreapp3.1 -r win-x86
     - name: "Zip"
-      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-${{ github.head_ref }}.zip
+      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader.zip
     - name: Upload AuroraLoader artifact
       uses: actions/upload-artifact@v1
       with:
-        name: AuroraLoader
-        path: ./AuroraLoader-${{ github.head_ref }}.zip
+        name: AuroraLoader.zip
+        path: ./AuroraLoader.zip
 
   release:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
           name: AuroraLoader ${{ github.head_ref }}
           tag: ${{ github.head_ref }}
           commit: ${{ github.event.after }}
-          artifacts: AuroraLoader-${{ github.head_ref }}.zip
+          artifacts: AuroraLoader.zip
           artifactContentType: application/zip
           prerelease: true
           allowUpdates: true
@@ -58,7 +58,7 @@ jobs:
           name: AuroraLoader
           tag: ${{ github.ref }}
           commit: ${{ github.sha }}
-          artifacts: "AuroraLoader.zip"
+          artifacts: AuroraLoader.zip
           artifactContentType: application/zip
           prerelease: true
           allowUpdates: true
