--- a/AuroraLoader/AuroraLoader.csproj
+++ b/AuroraLoader/AuroraLoader.csproj
@@ -38,13 +38,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
     <PackageReference Include="NAudio" Version="1.10.0" />
     <PackageReference Include="Semver" Version="2.0.6" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.112.2" />
   </ItemGroup>
 
   <ItemGroup>
