--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Publish
       run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained false --nologo -f netcoreapp3.1 -r win-x86
     - name: "Zip"
-      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-${GITHUB_SHA::8}.zip
+      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-${{GITHUB_SHA::8}}.zip
     - name: Upload AuroraLoader artifact
       uses: actions/upload-artifact@v2
       with:
-        path: ./AuroraLoader-${GITHUB_SHA::8}.zip
+        path: ./AuroraLoader-${{GITHUB_SHA::8}}.zip
