--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,9 +25,15 @@ jobs:
       run: dotnet test --no-restore --verbosity normal
     - name: Publish
       run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained false --nologo -f netcoreapp3.1 -r win-x86
+    - name: get shortsha
+      id: vars
+      run: |
+        echo ::set-output name=sha_short::$(git rev-parse --short=5 ${{ github.sha }})
     - name: "Zip"
-      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-${{GITHUB_SHA::8}}.zip
+      env:
+        SHA: ${{ steps.vars.outputs.sha_short }}
+      run: Compress-Archive -Path ./Release/*, ./README.md -DestinationPath AuroraLoader-$SHA.zip
     - name: Upload AuroraLoader artifact
       uses: actions/upload-artifact@v2
       with:
-        path: ./AuroraLoader-${{GITHUB_SHA::8}}.zip
+        path: ./AuroraLoader*.zip
