--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --verbosity normal
     - name: Publish
-      run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained false --nologo -f netcoreapp3.1 -r win-x86
+      run: dotnet publish AuroraLoader -c Release -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true --no-restore --self-contained true --nologo -f netcoreapp3.1 -r win-x86
     - name: "Zip"
       run: Compress-Archive -Path "./Release/*", "./README.md", "./CHANGELOG.md" -DestinationPath "AuroraLoader-$(git rev-parse --short=5 ${{ github.sha }}).zip"
     - name: Upload AuroraLoader artifact
