--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,10 +14,12 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x'
+        dotnet-version: 3.1.300
+      env:
+        DOTNET_NOLOGO: true
     - run: dotnet test
     - name: Build and publish
-      run: dotnet publish AuroraLoader --no-restore --self-contained true --nologo -f netcoreapp3.1 -r win-x86 -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true
+      run: dotnet publish AuroraLoader --no-restore --self-contained true -f netcoreapp3.1 -r win-x86 -o ./Release -p:PublishReadyToRun=true -p:PublishSingleFile=true
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
