--- a/AuroraLoader/aurora_versions.ini
+++ b/AuroraLoader/aurora_versions.ini
@@ -1,4 +1,4 @@
-﻿1.5.1=NSjCq8
+1.5.1=NSjCq8
 1.6.2=dWWrVq
 1.6.3=wUiE6B
 1.7.0=HlkNp1
@@ -7,3 +7,9 @@
 1.7.3=GeG18n
 1.8.0=i4SLwD
 1.9.0=lrpl5w
+1.9.2=ZBYjFm
+1.9.3=rTJo4i
+1.9.4=rXRqxb
+1.9.5=tzIeup
+1.10.0=sfnrR7
+1.11.0=yBBAST
