Added Checksums for versions 2.0.0 to 2.5.1 & updated typo in mirrors.ini

--- a/AuroraLoader/aurora_versions.ini
+++ b/AuroraLoader/aurora_versions.ini
@@ -13,3 +13,16 @@
 1.9.5=tzIeup
 1.10.0=sfnrR7
 1.11.0=yBBAST
+2.0.0=KqNIFz
+2.0.1=KqNIFz
+2.0.2=JlajBi
+2.0.3=rTG4cH
+2.1.0=vN9TNw
+2.1.1=dfu4kn
+2.2.0=sYHMYH
+2.2.1=sYHMYH
+2.3.0=XAH1s5
+2.3.1=mw9Jjo
+2.4.0=QmEE2Q
+2.5.0=GoKcbN
+2.5.1=kWt0gg
